src/assets/index.css
/* base styles */
* {
  margin: 0;
  font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #333;
}
button {
  border-color: transparent;
  border-style: solid;
}
button:hover {
  filter: brightness(1.1);
}
.page-space {
  margin-left: 300px;
  height: 100%;
  width: calc(100vw - 300px);
  margin-top: 140px;
  margin-bottom: 80px;
  background-color: #f2f2f2;
}
.content {
  padding: 20px;
}
.App {
  text-align: center;
}
.player {
  position: fixed;
  bottom: 0;
  width: calc(100% - 300px);
  margin-left: 300px;
  box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, 0.2);
  height: auto;
  z-index: 1;
}

/* loading wheel */
.loader {
  border: 7px solid #f3f3f3;
  border-radius: 50%;
  border-top: 7px solid #1db954;
  width: 30px;
  height: 30px;
  -webkit-animation: spin 2s linear infinite; /* Safari */
  animation: spin 2s linear infinite;
  margin: 15px auto;
}

/* Safari */
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

